--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.activity.MainActivity"
-            android:configChanges="orientation">
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,6 +23,7 @@
 
         <activity
             android:name=".view.activity.ItemDetailsActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
             android:label="" />
     </application>
 
