Added a create account screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,11 +20,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".view.activity.ItemDetailsActivity"
             android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
             android:label="" />
+        <activity android:name=".view.activity.CreateAccountActivity"></activity>
     </application>
 
 </manifest>
