Added a Sign In and Sign Up screens

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,18 +13,19 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.activity.MainActivity"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize">
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize" />
+        <activity
+            android:name=".view.activity.ItemDetailsActivity"
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
+            android:label="" />
+        <activity android:name=".view.activity.CreateAccountActivity" />
+        <activity android:name=".view.activity.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".view.activity.ItemDetailsActivity"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:label="" />
-        <activity android:name=".view.activity.CreateAccountActivity"></activity>
     </application>
 
 </manifest>
