--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".view.activity.MainActivity"
-            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"
-            android:launchMode="singleInstance" />
+            android:configChanges="orientation|keyboard|keyboardHidden|screenSize"/>
 
         <activity
             android:name=".view.activity.ItemDetailsActivity"
