--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,9 @@
             android:label="" />
 
         <activity
-            android:name=".view.activity.CreateAccountActivity"
-            android:launchMode="singleInstance" />
+            android:name=".view.activity.CreateAccountActivity"/>
         <activity
-            android:name=".view.activity.SignInActivity"
-            android:launchMode="singleInstance" />
+            android:name=".view.activity.SignInActivity"/>
         <activity android:name=".view.activity.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
